# Opengl-tesshmap

./: .gitmodules  CMakeLists.txt  README.md
assets/: spikeball.glb
assets/shaders/: test.frag  test.tesc  test.tese  test.vert
src/: asset_loader.cpp  asset_loader.h  glm_includes.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  window.cpp  window.h
